--- a/css/style.css
+++ b/css/style.css
@@ -122,7 +122,9 @@ img {
   background-color: #0b0b0b;
 	padding: 18px 20px 14px;
   
-  font-family: "Montserrat-Black";
+	font-family: "Montserrat-Black", "Arial", sans-serif;
+	font-style: normal;
+	font-weight: 900;
   font-size: 12.5px;
   letter-spacing: 2.25px;
   color: #fff;
@@ -186,7 +188,9 @@ img {
 }
 
 .menu__link {
-	font-family: "Montserrat-Bold";
+	font-family: "Montserrat-Bold", "Arial", sans-serif;
+	font-style: normal;
+	font-weight: 700;
 	text-transform: uppercase;
 	letter-spacing: 2.67px;
 	font-size: 16.7px;
@@ -294,8 +298,9 @@ img {
 .mobile-menu__link {
   display: block;
   padding: 12px 24px;
-  font-family: "Montserrat-Bold";
-  font-weight: 700;
+	font-family: "Montserrat-Bold", "Arial", sans-serif;
+	font-style: normal;
+	font-weight: 700;
   text-transform: uppercase;
   letter-spacing: 2.67px;
   font-size: 15px;
@@ -343,7 +348,9 @@ img {
 .mobile__phone--number span {
   background-color: #000;
   color: #fff;
-  font-family: "Montserrat-Extra-Bold"; 
+	font-family: "Montserrat-Extra-Bold", "Arial", sans-serif;
+	font-style: normal;
+	font-weight: 800;
   text-transform: uppercase; 
 }
 
@@ -365,7 +372,9 @@ img {
 	text-align: center;
 	padding: 7px 15px;
 	margin: 5px;
-	font-family: "Montserrat-Medium";
+	font-family: "Montserrat-Medium", "Arial", sans-serif;
+	font-style: normal;
+	font-weight: 500;
 	font-size: 10px;
 	line-height: normal;
 	color: #010101;
@@ -461,7 +470,9 @@ img {
 .promo__title,
 .promo__subtitle,
 .promo__text {
-	font-family: "Montserrat-Extra-Bold";
+	font-family: "Montserrat-Extra-Bold", "Arial", sans-serif;
+	font-style: normal;
+	font-weight: 800;
 	text-transform: uppercase;
 	text-align: left;
 	padding: 0;
@@ -615,7 +626,7 @@ img {
 .choose__title {
   padding: 0;
   margin: 0;
-  font-family: "Montserrat-Bold";
+	font-family: "Montserrat-Bold", "Arial", sans-serif;
   color: #a2a2a2;
   text-transform: uppercase;
   font-size: 41.67px;
@@ -627,7 +638,9 @@ img {
 .choose__subtitle {
   padding: 0;
   margin: 0;
-  font-family: "Montserrat-Bold";
+	font-family: "Montserrat-Bold", "Arial", sans-serif;
+	font-style: normal;
+	font-weight: 700;
   color: #000;
   text-transform: capitalize;
 	font-size: 54.2px;
@@ -643,7 +656,9 @@ img {
   margin-right: 30px;
   padding-top: 10px;
   padding-bottom: 34px;
-  font-family: "Montserrat-Regular";
+	font-family: "Montserrat-Regular", "Arial", sans-serif;
+	font-style: normal;
+	font-weight: 400;
 	font-size: 20.9px;
 	line-height: 33px;
 	color: #3d3d3d;
@@ -732,7 +747,9 @@ img {
 
 .slider__controls::after {
 	content: "/ 06";
-	font-family: "Montserrat-Medium";
+	font-family: "Montserrat-Medium", "Arial", sans-serif;
+	font-style: normal;
+	font-weight: 500;
 	color: #9a9a9a;
 	font-size: 21px;
 	line-height: 33.33px;
@@ -746,7 +763,9 @@ img {
 #btn-4:checked ~ .slider__controls::before,
 #btn-5:checked ~ .slider__controls::before,
 #btn-6:checked ~ .slider__controls::before {
-  font-family: "Montserrat-Medium";
+	font-family: "Montserrat-Medium", "Arial", sans-serif;
+	font-style: normal;
+	font-weight: 500;
   font-size: 33px;
   line-height: 33.33px;
   text-align: center;
@@ -927,7 +946,9 @@ img {
 .features__title {
   padding: 0;
   margin: 0;
-  font-family: "Montserrat-Extra-Bold";
+	font-family: "Montserrat-Extra-Bold", "Arial", sans-serif;
+	font-style: normal;
+	font-weight: 800;
   text-transform: uppercase;
   font-size: 45.83px;
   line-height: 45.83px;
@@ -938,7 +959,9 @@ img {
 .features__text {
   padding: 0;
   margin: 0;
-  font-family: "Montserrat-Regular";
+	font-family: "Montserrat-Regular", "Arial", sans-serif;
+	font-style: normal;
+	font-weight: 400;
   font-size: 20.83px;
   line-height: 33.33px;
   padding-top: 10px;
@@ -992,7 +1015,9 @@ img {
 .feedback__title {
   padding: 75px 0 0;
   margin: 0;
-  font-family: "Montserrat-Extra-Bold";
+	font-family: "Montserrat-Extra-Bold", "Arial", sans-serif;
+	font-style: normal;
+	font-weight: 800;
   font-size: 45.83px;
   line-height: 54.17px;
   text-transform: capitalize;
@@ -1002,7 +1027,9 @@ img {
 .feedback__text {
   padding: 32px 13px 32px 0;
   margin: 0;
-  font-family: "Montserrat-Light";
+	font-family: "Montserrat-Light", "Arial", sans-serif;
+	font-style: normal;
+	font-weight: 300;
   letter-spacing: 0.8px;
   font-size: 21px;
   line-height: 29.17px;
@@ -1103,7 +1130,9 @@ footer {
 	padding: 2px;
 	background-color: #000;
 	color: #fff;
-	font-family: "Montserrat-Extra-Bold"; 
+	font-family: "Montserrat-Extra-Bold", "Arial", sans-serif;
+	font-style: normal;
+	font-weight: 800;
 	text-transform: uppercase; 
 }
 
@@ -1132,7 +1161,9 @@ footer {
   padding: 20px 0;
   min-width: 35%;
   margin: 0;
-  font-family: "Montserrat-Medium";
+	font-family: "Montserrat-Medium", "Arial", sans-serif;
+	font-style: normal;
+	font-weight: 500;
   font-size: 16.67px;
   line-height: normal;
   color: #010101;
